{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 27,
  "lineage": "7972b21b-2875-eeac-b6d6-e0b68fce8706",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "nat_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "146.148.98.205",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2020-12-11T02:05:27.210-08:00",
            "id": "projects/focus-mechanic-295618/regions/us-central1/addresses/flaskapp-staging-nat-ip",
            "name": "flaskapp-staging-nat-ip",
            "network_tier": "PREMIUM",
            "project": "focus-mechanic-295618",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/regions/us-central1/addresses/flaskapp-staging-nat-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "RATE",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/zones/us-central1-b/instanceGroups/flaskapp-staging-vm-group",
                "max_rate_per_instance": 100,
                "max_utilization": 0.8
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2020-12-11T02:06:34.597-08:00",
            "enable_cdn": false,
            "fingerprint": "L0qDKn3TUlk=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/global/healthChecks/flaskapp-staging-healthcheck"
            ],
            "id": "projects/focus-mechanic-295618/global/backendServices/flaskapp-staging-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "flaskapp-staging-backend-service",
            "port_name": "http",
            "project": "focus-mechanic-295618",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/global/backendServices/flaskapp-staging-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_health_check.healthcheck",
            "google_compute_instance.web_private_1",
            "google_compute_instance_group.web_private_group",
            "google_compute_network.vpc",
            "google_compute_subnetwork.private_subnet_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-12-11T02:05:39.395-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/focus-mechanic-295618/global/firewalls/flaskapp-staging-fw-allow-http",
            "log_config": [],
            "name": "flaskapp-staging-fw-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/global/networks/flaskapp-staging-vpc",
            "priority": 1000,
            "project": "focus-mechanic-295618",
            "self_link": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/global/firewalls/flaskapp-staging-fw-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-12-11T02:05:39.412-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/focus-mechanic-295618/global/firewalls/flaskapp-staging-fw-allow-https",
            "log_config": [],
            "name": "flaskapp-staging-fw-allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/global/networks/flaskapp-staging-vpc",
            "priority": 1000,
            "project": "focus-mechanic-295618",
            "self_link": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/global/firewalls/flaskapp-staging-fw-allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "https"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2020-12-11T02:05:39.389-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/focus-mechanic-295618/global/firewalls/flaskapp-staging-fw-allow-internal",
            "log_config": [],
            "name": "flaskapp-staging-fw-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/global/networks/flaskapp-staging-vpc",
            "priority": 1000,
            "project": "focus-mechanic-295618",
            "self_link": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/global/firewalls/flaskapp-staging-fw-allow-internal",
            "source_ranges": [
              "10.128.0.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-12-11T02:05:39.391-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/focus-mechanic-295618/global/firewalls/flaskapp-staging-fw-allow-rdp",
            "log_config": [],
            "name": "flaskapp-staging-fw-allow-rdp",
            "network": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/global/networks/flaskapp-staging-vpc",
            "priority": 1000,
            "project": "focus-mechanic-295618",
            "self_link": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/global/firewalls/flaskapp-staging-fw-allow-rdp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "rdp"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-12-11T02:05:39.390-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/focus-mechanic-295618/global/firewalls/flaskapp-staging-fw-allow-ssh",
            "log_config": [],
            "name": "flaskapp-staging-fw-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/global/networks/flaskapp-staging-vpc",
            "priority": 1000,
            "project": "focus-mechanic-295618",
            "self_link": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/global/firewalls/flaskapp-staging-fw-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.106.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2020-12-11T02:05:39.605-08:00",
            "id": "projects/focus-mechanic-295618/global/addresses/flaskapp-staging-private-ip-address",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "flaskapp-staging-private-ip-address",
            "network": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/global/networks/flaskapp-staging-vpc",
            "prefix_length": 16,
            "project": "focus-mechanic-295618",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/global/addresses/flaskapp-staging-private-ip-address"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "global_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/focus-mechanic-295618/global/forwardingRules/flaskapp-staging-global-forwarding-rule",
            "ip_address": "35.244.218.24",
            "ip_protocol": "TCP",
            "load_balancing_scheme": "EXTERNAL",
            "name": "flaskapp-staging-global-forwarding-rule",
            "port_range": "80-80",
            "project": "focus-mechanic-295618",
            "self_link": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/global/forwardingRules/flaskapp-staging-global-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/global/targetHttpProxies/flaskapp-staging-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.backend_service",
            "google_compute_health_check.healthcheck",
            "google_compute_instance.web_private_1",
            "google_compute_instance_group.web_private_group",
            "google_compute_network.vpc",
            "google_compute_subnetwork.private_subnet_1",
            "google_compute_target_http_proxy.target_http_proxy",
            "google_compute_url_map.url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "web_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20201123",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/zones/us-central1-b/disks/flaskapp-staging-vm-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "hostname": "flaskapp-staging-vm1.test",
            "id": "projects/focus-mechanic-295618/zones/us-central1-b/instances/flaskapp-staging-vm-1",
            "instance_id": "237635921275452002",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "ViqQ-mWSzJ0=",
            "metadata_startup_script": "sudo apt-get update; sudo apt-get install -yq build-essential python-pip rsync; pip install flask; sudo apt install mysql-client; sudo apt-get install python-dev default-libmysqlclient-dev libssl-dev; pip install --user flask-mysqldb",
            "name": "flaskapp-staging-vm-1",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/global/networks/flaskapp-staging-vpc",
                "network_ip": "10.128.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/regions/us-central1/subnetworks/flaskapp-staging-private-subnet-1",
                "subnetwork_project": "focus-mechanic-295618"
              }
            ],
            "project": "focus-mechanic-295618",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/zones/us-central1-b/instances/flaskapp-staging-vm-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http",
              "ssh"
            ],
            "tags_fingerprint": "7XLBdwIeS7E=",
            "zone": "us-central1-b"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.private_subnet_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/focus-mechanic-295618/global/networks/flaskapp-staging-vpc",
            "mtu": 0,
            "name": "flaskapp-staging-vpc",
            "project": "focus-mechanic-295618",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/global/networks/flaskapp-staging-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat-router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-12-11T02:05:39.717-08:00",
            "id": "projects/focus-mechanic-295618/regions/us-central1/routers/flaskapp-staging-nat-router",
            "name": "flaskapp-staging-nat-router",
            "network": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/global/networks/flaskapp-staging-vpc",
            "project": "focus-mechanic-295618",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/regions/us-central1/routers/flaskapp-staging-nat-router"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "icmp_idle_timeout_sec": 30,
            "id": "focus-mechanic-295618/us-central1/flaskapp-staging-nat-router/flaskapp-nat-gateway",
            "min_ports_per_vm": 0,
            "name": "flaskapp-nat-gateway",
            "nat_ip_allocate_option": "MANUAL_ONLY",
            "nat_ips": [
              "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/regions/us-central1/addresses/flaskapp-staging-nat-ip"
            ],
            "project": "focus-mechanic-295618",
            "router": "flaskapp-staging-nat-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_address.nat_ip",
            "google_compute_network.vpc",
            "google_compute_router.nat-router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-12-11T02:05:39.934-08:00",
            "gateway_address": "10.128.0.1",
            "id": "projects/focus-mechanic-295618/regions/us-central1/subnetworks/flaskapp-staging-private-subnet-1",
            "ip_cidr_range": "10.128.0.0/20",
            "name": "flaskapp-staging-private-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/global/networks/flaskapp-staging-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "focus-mechanic-295618",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/regions/us-central1/subnetworks/flaskapp-staging-private-subnet-1"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "target_http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-12-11T02:06:49.030-08:00",
            "id": "projects/focus-mechanic-295618/global/targetHttpProxies/flaskapp-staging-proxy",
            "name": "flaskapp-staging-proxy",
            "project": "focus-mechanic-295618",
            "proxy_id": 4651185889928477270,
            "self_link": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/global/targetHttpProxies/flaskapp-staging-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/global/urlMaps/flaskapp-staging-load-balancer"
          },
          "dependencies": [
            "google_compute_backend_service.backend_service",
            "google_compute_health_check.healthcheck",
            "google_compute_instance.web_private_1",
            "google_compute_instance_group.web_private_group",
            "google_compute_network.vpc",
            "google_compute_subnetwork.private_subnet_1",
            "google_compute_url_map.url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-12-11T02:06:46.887-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/global/backendServices/flaskapp-staging-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "85xZNBJG6FU=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/focus-mechanic-295618/global/urlMaps/flaskapp-staging-load-balancer",
            "map_id": 2541352625324882521,
            "name": "flaskapp-staging-load-balancer",
            "path_matcher": [],
            "project": "focus-mechanic-295618",
            "self_link": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/global/urlMaps/flaskapp-staging-load-balancer",
            "test": [],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_backend_service.backend_service",
            "google_compute_health_check.healthcheck",
            "google_compute_instance.web_private_1",
            "google_compute_instance_group.web_private_group",
            "google_compute_network.vpc",
            "google_compute_subnetwork.private_subnet_1"
          ]
        }
      ]
    }
  ]
}